<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_style"
            android:layout_marginBottom="20dp">

            <!--<TextView
                android:id="@+id/title_term_and_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="AEON TERMS AND CONDITIONS"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="@dimen/text_regular_2x"
                android:fontFamily="@font/pyidaungsu_bold"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/faq_terms_cond_title"
                    android:textColor="@color/colorPrimary"
                    android:layout_margin="@dimen/margin_medium"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/pyidaungsu_bold"
                    android:text="@string/termandcon_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p001"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p002"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p003"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p004"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p005"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p006"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p007"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p008"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p009"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p010"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p011"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p012"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p013"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p014"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_margin="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/termandcon_p015"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_close"
        android:layout_margin="@dimen/margin_small"
        android:backgroundTint="@color/colorPrimary"
        app:elevation="@dimen/cv_elevation"
        app:fabSize="mini"
        app:backgroundTint="@color/white"
        android:src="@drawable/ic_clear_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>