<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:theme="@style/ToolbarTheme"
            app:contentInsetStart="@dimen/margin_medium"
            app:contentInsetLeft="@dimen/margin_medium">

            <include
                android:id="@+id/toolbar_new_main"
                layout="@layout/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@null"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bio_reg_form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/reg_bio_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_regular_3x" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reg_bio_ph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/reg_bio_phone_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_regular" />

                <TextView
                    android:id="@+id/reg_bio_ph_err"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/reg_bio_phone_err"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_regular"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/text_reg_bio_ph"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/edit_text_style"
                    android:fontFamily="@font/input_text_font"
                    android:hint="@string/reg_bio_phone_hint"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingLeft="@dimen/margin_medium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grayLight"
                    android:textSize="@dimen/text_regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reg_bio_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/reg_bio_pwd_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_regular" />

                <TextView
                    android:id="@+id/bio_reg_pwd_err"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/reg_bio_pwd_err"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_regular"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/text_reg_bio_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/edit_text_style"
                    android:fontFamily="@font/input_text_font"
                    android:hint="@string/register_password_holder"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingLeft="@dimen/margin_medium"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grayLight"
                    android:textSize="@dimen/text_regular" />

                <TextView
                    android:id="@+id/txt_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:fontFamily="@font/pyidaungsu_bold"
                    android:text="@string/reg_bio_warning_title"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/biometric_warning_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/reg_bio_warning_content"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_reg_bio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:fontFamily="@font/pyidaungsu_regular"
                    android:text="@string/reg_bio_submit_btn"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_medium_2" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>